--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
-    "core-js": "^3.23.4",
-    "swiper": "^8.3.0"
+    "core-js": "^3.23.4"
   }
 }
